--- a/car-lib/CarGearViewerKotlin/automotive/build.gradle
+++ b/car-lib/CarGearViewerKotlin/automotive/build.gradle
@@ -38,11 +38,16 @@ android {
     }
 
     // android.car exists since Android 10 (API level 29) Revision 5.
-    useLibrary 'android.car'
+//    useLibrary 'android.car'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.9.0'
+
+    // to fix unresolved references to android.car
+    def sdkDir = project.android.sdkDirectory.canonicalPath
+    def androidCarJar = "$sdkDir/platforms/android-33/optional/android.car.jar"
+    implementation(files(androidCarJar))
 }
