Update gradle 7.2.2 to 8.4.1

--- a/car-lib/CarGearViewerKotlin/automotive/build.gradle
+++ b/car-lib/CarGearViewerKotlin/automotive/build.gradle
@@ -36,6 +36,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.cargearviewer'
 
     // android.car exists since Android 10 (API level 29) Revision 5.
 //    useLibrary 'android.car'
